--- a/portfolio/src/components/Header/style.scss
+++ b/portfolio/src/components/Header/style.scss
@@ -5,10 +5,8 @@ header {
     position: sticky;
     top: 0;
     width: 100%;
-
     color: white;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding: 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -18,7 +16,8 @@ header {
     .sidebar-wrapper {
         position: absolute;
         top: 0;
-        left: -20px; // -20px to compensate for padding in App
+        left: 0;
+        // left: -20px; // -20px to compensate for padding in App
         width: 100vw;
         z-index: 10;
 
@@ -74,25 +73,35 @@ header {
 
     nav {
         display: flex;
+        flex-direction: column;
 
         font-size: 20px;
 
-    }
 
-    .nav-link {
-        display: flex;
-        padding: 10px;
-        justify-content: center;
-        align-items: center;
+        .nav-link {
+            display: flex;
+            margin: 10px;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
 
-        a {
-            text-decoration: none;
-            color: white;
-            font-size: 20px;
-            width: 60%;
-            height: 100%;
-            text-align: center;
+            a {
+                text-decoration: none;
+                color: white;
+                font-size: 20px;
+                width: 100%;
+                height: 100%;
+                text-align: center;
+            }
         }
     }
 
+    // Desktop + big screen tablets only
+    @media screen and (min-width:768px) {
+        padding: 30px calc((100vw - 950px)/ 2);
+
+        nav {
+            flex-direction: row;
+        }
+    }
 }
